--- a/restaurantes/core/templates/cadastro.html
+++ b/restaurantes/core/templates/cadastro.html
@@ -6,7 +6,7 @@
 <body>
 
 <form action="/cadastro/" method="POST">{% csrf_token %}
-  {{ form.as_p }}
+  {{ form }}
   <input type="submit" value="Submit" />
 </form>
 
