--- a/restaurantes/core/templates/base.html
+++ b/restaurantes/core/templates/base.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-  <title>ComidaEmCasa</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ComidaEmCasa</title>
   	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
@@ -12,7 +16,7 @@
         }
 
         h1, h2, h3, h4 {
-            font-family: 'Raleway', serif;            
+            font-family: 'Raleway', serif;
         }
 
     </style>
