--- a/restaurantes/core/templates/base.html
+++ b/restaurantes/core/templates/base.html
@@ -40,7 +40,7 @@
 					<a class="navbar-brand" href="/">ComidaEmCasa</a>
 				</div>
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="MenuCtrl">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 
 					<ul class="nav navbar-nav navbar-right">
